# Automated-Initial-Whatsapp-Sales-JAANN

./: .gitignore  MODAL_UPDATES_COMPLETE.md  README.md  README_RENDER.md  about.html  actualwebsitestyle.css  add_column.py  add_promotion_role.py  admin_dashboard_main_hub  admin_dashboard_main_hub.html  app.js  app.py  auto_reply_template_manager.html  chat-history.html  customer-list.html  fix_db.py  fix_team_chat.py  home.html  init_teams.py  inquiry-repository.html  lead-scoring.html  promote_leader.py  promote_primary.py  promotion_model.py  pyproject.toml  render.yaml  services.html  style.css  update_user_model.py
instance/: database copy.db  database.db  seed_db.py
static/: app.js  app.js.bak  auto_reply.js  style.css
templates/: 404.html  admin_dashboard_main_hub.html  auto_reply_template_manager.html  chat-history.html  create_account.html  customer-list.html  customer_details.html  edit_customer.html  edit_profile.html  inquiry-repository.html  inquiry_detail.html  inquiry_new.html  lead-scoring.html  login.html  my_team.html  rule_form.html  settings.html  visitor_profile.html
